infra/argocd/install/argocd-install.yaml
# Argo CD Installation
# This file contains the resources needed to install Argo CD in the cluster

apiVersion: v1
kind: Namespace
metadata:
  name: argocd
